--- a/test.html
+++ b/test.html
@@ -88,17 +88,17 @@
 
                                <!-- soon pwa -->
     <!-- LOAD LOCAL CSS -->
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/megamenu.css">
-  <link rel="stylesheet" href="../css/style-three.css" id="theme">
-  <link rel="stylesheet" href="../css/ionicons.css">
-  <link rel="stylesheet" href="../css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/responsive.css">
-  <link rel="stylesheet" href="../css/splide.min.css">
-  <link rel="stylesheet" href="../css/player-crimson.css">
-  <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/validatesecurity.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/megamenu.css">
+  <link rel="stylesheet" href="css/style-three.css" id="theme">
+  <link rel="stylesheet" href="css/ionicons.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/splide.min.css">
+  <link rel="stylesheet" href="css/player-crimson.css">
+  <link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
+  <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/validatesecurity.css">
  
 
 
@@ -106,7 +106,7 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
      
     <!-- SweetAlert2 -->
-    <script src="../js/sweetalert2@11.js"></script>
+    <script src="js/sweetalert2@11.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -144,7 +144,7 @@
         <div class="mod-menu">
           <div class="row">
             <div class="col-2"> 
-              <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
+              <a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
             </div>
             <div class="col-7 nav-order-last nopadding">
               <div class="main-nav leftnav">
@@ -153,9 +153,9 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="../index.html" class="" title="home">Home</a></li>
-                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
-                    <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
+                    <li><a href="index.html" class="" title="home">Home</a></li>
+                    <li><a href="films.html" class="Active" title="Films">Films</a></li>
+                    <li style="border-bottom: 0px solid !important;"><a href="direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
                 </div>
@@ -186,7 +186,7 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/30-jours-max/30-jours-max-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(img/film/30-jours-max/30-jours-max-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
                   <div class="d-flex dtl-title-block mb-2">  
                     <h1 class="mb-0" style="font-weight: bold;">30 jours max</h1>
                   </div>
@@ -381,7 +381,7 @@ async function showSuggestions(query) {
 
   if (!query) return; // Si la requête est vide, ne rien faire
 
-  const response = await fetch('../search/d.json');
+  const response = await fetch('search/d.json');
   const movies = await response.json();
 
   const filteredMovies = movies.filter(movie => movie.nom.toLowerCase().includes(query.toLowerCase()));
