--- a/404.html
+++ b/404.html
@@ -36,32 +36,22 @@
 
    <!-- LOAD LOCAL CSS -->
     
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/megamenu.css">
-  <link rel="stylesheet" href="css/style-three.css" id="theme">
-  <link rel="stylesheet" href="css/ionicons.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/splide.min.css">
-  <link rel="stylesheet" href="css/player-crimson.css">
-  <link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/validatesecurity.css">
-  <link rel="stylesheet" href="css/search.css">
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/megamenu.css">
-  <link rel="stylesheet" href="../css/style-three.css" id="theme">
-  <link rel="stylesheet" href="../css/ionicons.css">
-  <link rel="stylesheet" href="../css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/responsive.css">
-  <link rel="stylesheet" href="../css/splide.min.css">
-  <link rel="stylesheet" href="../css/player-crimson.css">
-  <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/megamenu.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/style-three.css" id="theme">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/ionicons.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/responsive.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/splide.min.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/player-crimson.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/jquery-eu-cookie-law-popup.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/validatesecurity.css">
+  <link rel="stylesheet" href="https://crimson-streaming.github.io/crimson/css/search.css">
+
 
     <!-- SweetAlert2 -->
-	<script src="js/sweetalert2@11.js"></script>
+	<script src="https://crimson-streaming.github.io/crimson/js/sweetalert2@11.js"></script>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -210,21 +200,16 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-<script src="../js/FWDEVPlayer.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>  
-<script src="../js/megamenu.js"></script> 
-<script src="../js/custom-main.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/megamenu.js"></script>
-<script src="js/splide.min.js"></script>
-<script src="js/custom-main.js"></script>
-<script src="js/jquery-eu-cookie-law-popup.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/jquery-3.3.1.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/jquery.easing.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/bootstrap.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/owl.carousel.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/jquery.nice-select.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/megamenu.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/splide.min.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/custom-main.js"></script>
+<script src="https://crimson-streaming.github.io/crimson/js/jquery-eu-cookie-law-popup.js"></script>
 
 
 
