--- a/test.html
+++ b/test.html
@@ -332,7 +332,7 @@
               <center>
                 <button class="vibrating-button" onclick="ajouterFilmTelechargement()" style="background-color: #7d7185 !important;">
                     Télécharger le film
-                    <img src="img/assets/image-removebg-preview.png"alt="gem" class="gem-icon">
+                    <img src="img/assets/install.png"alt="gem" class="gem-icon">
                 </button>
             </center>
         
