--- a/téléchargement.html
+++ b/téléchargement.html
@@ -34,7 +34,7 @@
     <style>
 
         #film-container {
-            background-color: #fff;
+            background-color: #d9cece;
             max-width: 320px;
             margin: 30px auto;
             padding: 20px;
