--- a/téléchargement.html
+++ b/téléchargement.html
@@ -63,6 +63,7 @@
             border-radius: 5px;
             overflow: hidden;
             margin: 20px 0;
+            border: 2px solid #6f6362; /* Ajout de la couleur de contour */
         }
 
         .progress-fill {
