--- a/téléchargement.html
+++ b/téléchargement.html
@@ -63,7 +63,7 @@
             border-radius: 5px;
             overflow: hidden;
             margin: 20px 0;
-            border: 2px solid #6f6362; /* Ajout de la couleur de contour */
+            box-shadow: 0 0 10px 3px #b81b0e; /* Ajout de l'effet de dégradé rouge autour */
         }
 
         .progress-fill {
