--- a/téléchargement.html
+++ b/téléchargement.html
@@ -35,12 +35,12 @@
 
         #film-container {
             background-color: #d9cece;
-            max-width: 320px;
+            max-width: 325px;
             margin: 30px auto;
             padding: 20px;
             text-align: center;
             border-radius: 8px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px 3px #b81b0e;
         }
 
         #film-nom {
