--- a/dowload/df.html
+++ b/dowload/df.html
@@ -224,7 +224,7 @@
             <div class="video-posts-video" style="display: flex;flex-direction: column-reverse;">
               <div id="pre-player">
     
-    <video id="player" playsinline controls preload="auto" poster="https://xalaflix.eu/upload/images/afA7uue1YsM9hLA0VR6wJoXG2GZ.jpg" controlsList="nodownload" oncontextmenu="return false;">
+    <video id="player" playsinline controls preload="auto" poster="https://Crimson/upload/images/afA7uue1YsM9hLA0VR6wJoXG2GZ.jpg" controlsList="nodownload" oncontextmenu="return false;">
            <source id="video-source" src="https://mx9skjnui4es.pradoi.com/hls2/01/05081/4zowpelruz5p_,l,n,h,.urlset/seg-1-f1-v1-a1.ts?t=grP6kuI1hxMlKHiCtuvei-j5ZW2NdF1BXY9_YEzHVj4&s=1731250724&e=129600&f=25407165&srv=meuzahgd24x5v&i=0.0&sp=500&p1=meuzahgd24x5v&p2=meuzahgd24x5v&asn=13335" type="application/x-mpegURL" size="720">
     </video>
     
