--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<div id="menu" class="collapse header-menu">
 									<ul class="nav vfx-item-nav">
 										<li><a href="index.html" class="" title="home">Home</a></li>
-										<li><a href="films.html" class="Active" title="Films">Films</a></li>
+										<li><a href="films/" class="Active" title="Films">Films</a></li>
 										<li><a href="direct.html" class="" title="En direct">En direct</a>
 										<li><a href="recrutement.html" class="" title="Recrutement">Recrutement</a>
 										<ul class="dm-align-2 mega-list"> </ul>
