--- a/404.html
+++ b/404.html
@@ -120,8 +120,8 @@
                                 <div id="menu" class="collapse header-menu">
                                     <ul class="nav vfx-item-nav">
                                         <li><a  href="https://crimson-streaming.github.io/crimson/" class="" title="home">Home</a></li>
-                                        <li><a href="https://crimson-streaming.github.io/crimson/films.html" class="Active" title="Films">Films</a></li>
-                                        <li style="border-bottom: 0px solid !important;"><a href=https://crimson-streaming.github.io/crimson/direct.html" class="" title="En direct">En direct</a>
+                                        <li><a href="https://crimson-streaming.github.io/crimson/films.html" class="" title="Films">Films</a></li>
+                                        <li><a href=https://crimson-streaming.github.io/crimson/direct.html" class="" title="En direct">En direct</a>
                                             <ul class="dm-align-2 mega-list"> </ul>
                                     </div>
                                 </div>
